# certified-gaussian-theta

./: LICENSE  README.md  RELEASE_NOTES_v2.0-certified.md  RELEASE_NOTES_v2.1-certified-near-boundary.md  VERSION
v2-certified/: evaluator.py  experiments.py  tables.py
v2-certified/latex_tables/: table1_regime_selection_a0.tex  table2_regime_selection_a_half.tex  table3_components_a0.tex  table4_components_a_half.tex  table5_precision_scaling_a0.tex  table6_precision_scaling_a_half.tex  table7_rec_vs_exp.tex  table8_guard_stability.tex  table9_reference_comparison.tex  tableX_crossover_plateau.tex
v2-certified/outputs/: table3_components_a0.csv  table4_components_a_half.csv  table5_precision_scaling_a0.csv  table6_precision_scaling_a_half.csv  table7_rec_vs_exp.csv  table8_guard_stability.csv  table9_reference_comparison.csv  tableX_crossover_plateau.csv
v2.1-certified-near-boundary/: ARTIFACT_DESCRIPTION.md  CITATION.cff  LICENSE_TODO.md  MANIFEST.txt  README.md  RELEASE_NOTES.md  pyproject.toml
v2.1-certified-near-boundary/experiments/: componentwise_radii.py  near_boundary_path.py  precision_scaling.py  regime_selection_all_shifts.py  run_all.py
v2.1-certified-near-boundary/results/: componentwise_radii.csv  near_boundary_path.csv  precision_scaling.csv  regime_selection_all_shifts.csv
v2.1-certified-near-boundary/src/certified_gaussian_theta/: __init__.py  evaluator.py
v2.1-certified-near-boundary/tests/: test_smoke.py
