[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "certified-gaussian-theta"
version = "2.1.0"
description = "Certified recurrence framework for positive-real Gaussian theta sums"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mpmath>=1.3.0"]
authors = [{name = "Thiat-ui Lau"}]

[tool.setuptools.packages.find]
where = ["src"]
